[gd_scene load_steps=4 format=3 uid="uid://ct78qhmrqbmgo"]

[ext_resource type="Theme" uid="uid://bgj72vffexht" path="res://assets/styles/panel_theme.tres" id="1_fogm0"]
[ext_resource type="Script" uid="uid://bbdvm4d1whhpp" path="res://scripts/ui/lobby/vanilla_connection_screen.gd" id="2_nxlj7"]
[ext_resource type="Script" uid="uid://boq3i75yls51h" path="res://scripts/ui/ingame_ui/se_button.gd" id="3_204x2"]

[node name="Connect" type="Panel"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -416.0
offset_top = -206.0
offset_right = 416.0
offset_bottom = 210.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource("1_fogm0")
script = ExtResource("2_nxlj7")

[node name="NameLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 14.0
offset_top = 11.0
offset_right = 56.0
offset_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"

[node name="Name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 38.0
offset_right = 173.0
offset_bottom = 69.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Dragoon"

[node name="IPLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 74.0
offset_right = 57.0
offset_bottom = 97.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 16
text = "IP:"

[node name="IPAddress" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = 102.0
offset_right = 173.0
offset_bottom = 133.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "127.0.0.1"

[node name="Host" type="Button" parent="." groups=["ui_button"]]
layout_mode = 0
offset_left = 181.0
offset_top = 38.0
offset_right = 251.0
offset_bottom = 76.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"
script = ExtResource("3_204x2")
metadata/_custom_type_script = "uid://boq3i75yls51h"

[node name="Join" type="Button" parent="." groups=["ui_button"]]
layout_mode = 0
offset_left = 181.0
offset_top = 102.0
offset_right = 246.0
offset_bottom = 140.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"
script = ExtResource("3_204x2")
metadata/_custom_type_script = "uid://boq3i75yls51h"

[node name="ErrorLabel" type="Label" parent="."]
layout_mode = 0
offset_left = 15.0
offset_top = 138.0
offset_right = 257.0
offset_bottom = 161.0
size_flags_horizontal = 2
size_flags_vertical = 0
theme_override_colors/font_color = Color(0.820312, 0.291595, 0.291595, 1)

[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
